# scrit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/scrit/: __init__.py  app.py  audio.py  config.py  listener.py  settings.json
